tests/NormalTests/paczka1/small_fuzzy/70446327.err
Error in line 1: HMsKMI6 A598 81,5
Error in line 3: QcHynUlFZo A598 44,3
